# polarize

./: GUIDE.md  README.md  pyproject.toml
src/polarize/: __init__.py  app.py  cli.py
src/polarize/discovery/: analyzer.py  scorer.py
src/polarize/profiler/: profiler.py
src/polarize/reporter/: report.py
src/polarize/validator/: validator.py
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/fixtures/apply_func/: expected.py  input.py
tests/fixtures/apply_func/data/: transactions.csv
tests/fixtures/chained_ops/: expected.py  input.py
tests/fixtures/chained_ops/data/: logs.csv
tests/fixtures/groupby_agg/: expected.py  input.py
tests/fixtures/groupby_agg/data/: sales.csv
tests/fixtures/loop_groupby/: expected.py  input.py
tests/fixtures/loop_groupby/data/: metrics.csv
tests/fixtures/merge_join/: expected.py  input.py
tests/fixtures/merge_join/data/: customers.csv  orders.csv
tests/fixtures/sort_values/: expected.py  input.py
tests/fixtures/sort_values/data/: events.csv
tests/integration/: test_discovery_pipeline.py  test_validation_pipeline.py
tests/unit/: test_analyzer.py  test_api.py  test_cli.py  test_profiler.py  test_report.py  test_scorer.py  test_validator.py
